--- a/style.css
+++ b/style.css
@@ -33,8 +33,15 @@ body {
 }
 
 .status.valid {
-  background-color: var(--govcheck-green) !important;
+   background-color: var(--govcheck-green);
   color: #ffffff;
+  border: none;
+  border-radius: 10px;
+  font-size: 16px;
+  font-weight: 700;
+  padding: 14px;
+  margin: 16px;
+  outline: 3px solid black;
 }
 
 .status .icon {
@@ -88,6 +95,7 @@ body {
 .scan-btn:active {
   opacity: 0.9;
 }
+
 
 
 
