--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
 
 .status.valid {
    background-color: var(--govcheck-green);
-  color: #ffffff;
+  color: #000000;
   border: none;
   border-radius: 10px;
   font-size: 16px;
@@ -82,7 +82,7 @@ body {
 
 .scan-btn {
   background-color: var(--govcheck-green);
-  color: #ffffff;
+  color: #000000;
   border: none;
   border-radius: 10px;
   font-size: 16px;
@@ -95,6 +95,7 @@ body {
 .scan-btn:active {
   opacity: 0.9;
 }
+
 
 
 
